# freqtrade-mcp

./: .env.example  .gitignore  NOTICE  README.md  pyproject.toml
examples/clients/: claude-code.mcp.json  codex-config.toml.snippet  gemini-settings.json.snippet
examples/freqtrade/: MetaStrategy.py  config.json.example  docker-compose.yml.example
freqtrade_mcp/: __init__.py  cli.py  config.py  freqtrade_client.py  market.py  mcp_server.py  risk_guardian.py
tests/: test_mcp_e2e.py
