[project]
name = "freqtrade-mcp"
version = "0.1.0"
description = "MCP server bridging Freqtrade to any MCP-aware LLM client (Claude Code, Codex CLI, Gemini CLI, Cursor, Cline, Claude Desktop)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "FaFengFei1961" }]
keywords = [
    "freqtrade", "mcp", "model-context-protocol",
    "trading", "crypto", "perpetual-futures", "ccxt",
    "llm", "agent", "claude", "gpt", "gemini",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.8,<3.0",
    "pydantic-settings>=2.5,<3.0",
    "typer>=0.12,<1.0",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "mcp[cli]>=1.2",
    "ccxt>=4.4",
    "pandas>=2.2",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
    "black>=24.0",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/FaFengFei1961/freqtrade-mcp"
Repository = "https://github.com/FaFengFei1961/freqtrade-mcp"
Issues = "https://github.com/FaFengFei1961/freqtrade-mcp/issues"

[project.scripts]
freqtrade-mcp = "freqtrade_mcp.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["freqtrade_mcp*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "RUF"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
